{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 5,
  "lineage": "1fb17d75-eaa9-8a08-6645-d61cce81867b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0593eae81f10f03f3",
            "arn": "arn:aws:ec2:eu-north-1:637423458704:elastic-ip/eipalloc-0593eae81f10f03f3",
            "domain": "vpc",
            "id": "eipalloc-0593eae81f10f03f3",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-138-236.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.138.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423458704:security-group/sg-05f8e378e0b4c9b4c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05f8e378e0b4c9b4c",
            "ingress": [],
            "name": "attribute-sg",
            "name_prefix": "",
            "owner_id": "637423458704",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d5226f9a01276efd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423458704:security-group-rule/sgr-047f079cc9e773aac",
            "cidr_ipv4": "51.21.138.236/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-047f079cc9e773aac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05f8e378e0b4c9b4c",
            "security_group_rule_id": "sgr-047f079cc9e773aac",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.example"
          ]
        }
      ]
    }
  ]
}